--- a/src/Components/Pages/Dashboard.css
+++ b/src/Components/Pages/Dashboard.css
@@ -294,7 +294,7 @@
     justify-content: center;
   }
   
-  .loader {
+  .loader1 {
     width: 40px;
     height: 40px;
     border: 3px solid rgba(142, 68, 173, 0.3);
