--- a/src/assets/Style.css
+++ b/src/assets/Style.css
@@ -1173,7 +1173,7 @@ tr:hover {
     font-size: 24px;
     border-radius: 8px;
     border: 1px solid var(--border-color);
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.832);
     color: var(--text-light);
 }
 
@@ -1427,7 +1427,7 @@ tr:hover {
   text-align: center;
   border: 1px solid #ddd;
   border-radius: 8px;
-  background-color: #f9f9f9;
+  background-color: #0c0b0b;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 
